# tiny-crm

./: PLAN.md  README.md  compose.full.yml  compose.yml  renovate.json
.github/workflows/: build-backend.yml  build-frontend.yml  build.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  log_config.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0da0483d8c43_create_projects_and_link_tables.py  6ca7a76a6f2e_create_contacts_table.py  8c177322b7a4_create_documents_table.py  a1b2c3d4e5f6_create_user_table.py  b2c3d4e5f6a7_add_user_id_to_contacts.py  c3d4e5f6a7b8_create_tasks_table.py  d4e5f6a7b8c9_tasks_timestamptz.py  e5f6a7b8c9d0_add_tags_to_tasks.py  f6a7b8c9d0e1_add_done_to_tasks.py  g7h8i9j0k1l2_add_name_and_password_changed_at_to_user.py
backend/app/: config.py  db.py  logging_config.py  main.py  storage.py
backend/app/auth/: users.py
backend/app/models/: contact.py  document.py  project.py  task.py
backend/app/routers/: contacts.py  documents.py  projects.py  tasks.py  users.py
backend/app/schemas/: contact.py  document.py  project.py  task.py  user.py
backend/scripts/: create_admin.py
frontend/: Dockerfile  pubspec.yaml
frontend/lib/: api.dart  config.dart  main.dart  router.dart
frontend/lib/core/: auth_storage.dart  version_check.dart
frontend/lib/models/: contact.dart  document.dart  project.dart  task.dart  user.dart
frontend/lib/pages/: change_password_page.dart  contact_detail_page.dart  contact_form_page.dart  contacts_page.dart  dashboard_page.dart  documents_page.dart  health_page.dart  (+5 more)
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+11 files in other folders)
