[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "tiny-crm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=13.0",
    "aioboto3>=13.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",   # TestClient for FastAPI tests
    "types-aioboto3[s3]>=13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["I001"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
